# calm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/models/: cube.gltf  icosphere.gltf  materials.gltf  paint.gltf  test.gltf  textured.gltf
assets/shaders/: triangle_ps.hlsl  triangle_vs.hlsl
assets/shaders/compiled/: triangle_ps.h  triangle_vs.h
ext/: CMakeLists.txt
ext/glad/: glad.c
ext/glad/glad/: glad.h
include/calm/: calm.h
playground/: CMakeLists.txt
playground/shaders/: triangle.frag  triangle.vert
playground/src/: main.cpp
scripts/: compile_shaders.bat
src/: calm.cpp
src/calm/: calm_win.h  main.cpp
src/calm/backend/: backend.cpp  backend.h  context.cpp  context.h  device.cpp  device.h
src/calm/core/: app.cpp  app.h  device.cpp  device.h  window.cpp  window.h
src/calm/util/: calmdef.h  calmwin.h  util.h
